--- a/index.html
+++ b/index.html
@@ -12,21 +12,22 @@
 </head>
 <body>
    <header>
-
-    <nav>
+<div class="heder_conteiner">
+    <nav class="nav">
         <a class="lo_go  link" href="index.html" >WEB<span class="logo_2">Studio</span></a>
-        <ul class="list">
-            <li><a class="link-heder link" href="./index.html" >Studio</a></li>
-            <li><a class="link-heder link" href="./portfolio.html">Portfolio</a></li>  
-            <li><a class="link-heder link" href="">Contacts</a></li>
+        <ul class="list-heder list">
+            <li class="list__item"><a class="link-heder link" href="./portfolio.html">Portfolio</a></li>  
+            <li class="list__item"><a class="link-heder link" href="">Contacts</a></li>
+            <li class="list__item"><a class="link-heder link" href="./index.html" >Studio</a></li>
         </ul> 
     </nav>
         <address class="adres">
             <ul class="list">
-            <li><a class="adres__meil link" href="meilto:info@devstudio.com" >info@devstudio.com</a></li>
-            <li><a class="adres__meil link" href="tel:+11(000)111-11-11">+11 (000) 111-11-11</a></li>
+            <li class="adres__item"><a class="adres__meil link" href="meilto:info@devstudio.com" >info@devstudio.com</a></li>
+            <li class="adres__item"><a class="adres__tel link" href="tel:+11(000)111-11-11">+11 (000) 111-11-11</a></li>
         </ul>
-        </address>
+        </address></div>
+        <img src="./images/Topine.jpg" alt="line">
    </header>
    <main>
 <section class="hero">
@@ -78,8 +79,10 @@
 </section>
    </main>
    <footer  class="footer">
+    <div class="footer-conteiner">
 <a class="lo_go link" href="index.html">WEB<span class="footer-logo">Studio</span></a>
 <p class="footer-text" >Increase the flow of customers and sales for your business with digital marketing & growth solutions.</p>
+</div>
    </footer>
 </body>
 </html>
