--- a/portfolio.html
+++ b/portfolio.html
@@ -12,19 +12,22 @@
 </head>
 <body>
     <header>
-        <nav class="list">
-            <a href="index.html" class="lo_go .link">WEB<span class="logo_2">STUDIO</span></a>
-            <ul class="list">
-                <li><a class="link-heder link"  href="./index.html">Studio</a></li>
-                <li><a  class="link-heder link" href="./portfolio.html">Portfolio</a></li>  
-                <li><a class="link-heder link"  href="">Contacts</a></li>
-            </ul> 
-        </nav>
-            <address class="adres">
-                <a class="adres__meil" href="meilto:info@devstudio.com" >info@devstudio.com</a>
-                <a class="adres__tel" href="tel:+11(000)111-11-11">+11 (000) 111-11-11</a>
-            </address>
-       
+        <div class="heder_conteiner">
+            <nav class="nav">
+                <a class="lo_go  link" href="index.html" >WEB<span class="logo_2">Studio</span></a>
+                <ul class="list-heder list">
+                    <li class="list__item"><a class="link-heder link" href="./portfolio.html">Portfolio</a></li>  
+                    <li class="list__item"><a class="link-heder link" href="">Contacts</a></li>
+                    <li class="list__item"><a class="link-heder link" href="./index.html" >Studio</a></li>
+                </ul> 
+            </nav>
+                <address class="adres">
+                    <ul class="list">
+                    <li class="adres__item"><a class="adres__meil link" href="meilto:info@devstudio.com" >info@devstudio.com</a></li>
+                    <li class="adres__item"><a class="adres__tel link" href="tel:+11(000)111-11-11">+11 (000) 111-11-11</a></li>
+                </ul>
+                </address></div>
+                <img src="./images/Topine.jpg" alt="line">
     </header>
     <main>
         <section>
@@ -36,41 +39,44 @@
             <li class="lists__item"><button class="lists__buuton" type="button">Design</button></li>
             <li class="lists__item"><button class="lists__buuton" type="button">Marketing</button></li>
         </ul>
+        <div class="portfolio__conteiner">
         <ul class="porfolio list">
             <li class="porfolio__item"><a class="link" href=""><img class="porfolio__photo" src="./images/img1.jpg" alt="Banking App Interface Concept" width="360">
-                <h2 class="portfolio__title">Banking App Interface Concept</h2>
-                <p class="portfolio__text">App</p></a></li>
+                <div class="border"><h2 class="portfolio__title">Banking App Interface Concept</h2>
+                <p class="portfolio__text">App</p></div></a></li>
             <li class="porfolio__item"><a class="link" href=""><img class="porfolio__photo" src="./images/img2.jpg" alt="Cashless Payment" width="360">
-                <h2 class="portfolio__title">Cashless Payment</h2>
-                <p class="portfolio__text">Marketing</p></a></li>
+                <div class="border"><h2 class="portfolio__title">Cashless Payment</h2>
+                <p class="portfolio__text">Marketing</p></div></a></li>
             <li class="porfolio__item"><a class="link" href=""><img class="porfolio__photo" src="./images/img3.jpg" alt="Meditaion App" width="360">
-                <h2 class="portfolio__title">Meditation App</h2>
-                <p class="portfolio__text">App</p></a></li>
+                <div class="border"><h2 class="portfolio__title">Meditation App</h2>
+                <p class="portfolio__text">App</p></div></a></li>
             <li class="porfolio__item"><a class="link" href=""><img class="porfolio__photo" src="./images/img4.jpg" alt="Taxi Service" width="360">
-                <h2 class="portfolio__title">Taxi Service</h2>
-                <p class="portfolio__text">Marketing</p></a></li>
+                <div class="border"> <h2 class="portfolio__title">Taxi Service</h2>
+                <p class="portfolio__text">Marketing</p></div></a></li>
             <li class="porfolio__item"><a class="link" href=""><img class="porfolio__photo" src="./images/img5.jpg" alt="Seen Illustrationscr" width="360">
-                <h2 class="portfolio__title">Screen Illustrations</h2>
-                <p class="portfolio__text">Design</p></a></li>
+                <div class="border"> <h2 class="portfolio__title">Screen Illustrations</h2>
+                <p class="portfolio__text">Design</p></div></a></li>
             <li class="porfolio__item"><a class="link" href=""><img class="porfolio__photo" src="./images/img6.jpg" alt="Online Courses" width="360">
-                <h2 class="portfolio__title">Online Courses</h2>
-                <p class="portfolio__text">Marketing</p></a></li>
+                <div class="border"> <h2 class="portfolio__title">Online Courses</h2>
+                <p class="portfolio__text">Marketing</p></div></a></li>
             <li class="porfolio__item"><a class="link" href=""><img class="porfolio__photo" src="./images/img7.jpg" alt="Instagram Stories Concept" width="360">
-                <h2 class="portfolio__title">Instagram Stories Concept</h2>
-                <p class="portfolio__text">Design</p></a></li>
+                <div class="border"><h2 class="portfolio__title">Instagram Stories Concept</h2>
+                <p class="portfolio__text">Design</p></div></a></li>
             <li class="porfolio__item"><a class="link" href=""><img class="porfolio__photo" src="./images/img8.jpg" alt="Organic Food" width="360">
-                <h2 class="portfolio__title">Organic Food</h2>
-                <p class="portfolio__text">Web Site</p></a></li>
+                <div class="border">  <h2 class="portfolio__title">Organic Food</h2>
+                <p class="portfolio__text">Web Site</p></div></a></li>
             <li class="porfolio__item"><a class="link" href=""><img class="porfolio__photo" src="./images/img9.jpg" alt="Fresh Coffee" width="360">
-                <h2 class="portfolio__title">Fresh Coffee</h2>
-                <p class="portfolio__text">Web Site</p></a></li>
+                <div class="border"> <h2 class="portfolio__title">Fresh Coffee</h2>
+                <p class="portfolio__text">Web Site</p></div></a></li>
         </ul>
+    </div>
         </section>
     </main>
     <footer  class="footer">
-        <a class="lo_go .link" href="index.html">WEB<span class="footer-logo">STUDIO</span></a>
-        <p class="footer-text">Increase the flow of customers and sales for your business with digital marketing & growth solutions.</p>
-    </footer>
-    
+        <div class="footer-conteiner">
+    <a class="lo_go link" href="index.html">WEB<span class="footer-logo">Studio</span></a>
+    <p class="footer-text" >Increase the flow of customers and sales for your business with digital marketing & growth solutions.</p>
+    </div>
+       </footer>
 </body>
 </html>
