--- a/index.html
+++ b/index.html
@@ -7,12 +7,13 @@
     <link rel="preconnect" href="https://fonts.googleapis.com">
 <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
 <link href="https://fonts.googleapis.com/css2?family=Raleway:wght@800&family=Roboto:wght@400;500;700&display=swap" rel="stylesheet">
+<link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/modern-normalize/1.1.0/modern-normalize.min.css">
     <link rel="stylesheet" href="./css/style.css">
     <title>WebStudio</title>
 </head>
 <body>
    <header class="heder">
-<div class="heder_conteiner">
+<div class="conteiner heder_conteiner">
     <nav class="nav">
         <a class="lo_go  link" href="index.html" >WEB<span class="logo_2">Studio</span></a>
         <ul class="list-heder list">
@@ -35,7 +36,7 @@
     <button class="button" type="button"> Order Service</button>
     </div>
 </section>
-<section>
+<section class="section">
   <div class="conteiner"> <h2 hidden class="visually-hidden">our advantages</h2>
     <ul class="advantages list">
         <li class="advantages__item"><h3 class="advantages__title">Strategy</h3>
@@ -90,7 +91,7 @@
    </main>
    <footer  class="footer">
     <div class="footer-conteiner">
-<a class="lo_go link" href="index.html">WEB<span class="footer-logo">Studio</span></a>
+<a class="lo_gof link" href="index.html">WEB<span class="footer-logo">Studio</span></a>
 <p class="footer-text" >Increase the flow of customers and sales for your business with digital marketing & growth solutions.</p>
 </div>
    </footer>
