--- a/portfolio.html
+++ b/portfolio.html
@@ -7,12 +7,13 @@
     <link rel="preconnect" href="https://fonts.googleapis.com">
 <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
 <link href="https://fonts.googleapis.com/css2?family=Raleway:wght@800&family=Roboto:wght@400;500;700&display=swap" rel="stylesheet">
+<link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/modern-normalize/1.1.0/modern-normalize.min.css">
   <link rel="stylesheet" href="./css/style.css">
     <title>porfolio</title>
 </head>
 <body>
     <header class="heder">
-        <div class="heder_conteiner">
+        <div class="conteiner   heder_conteiner">
             <nav class="nav">
                 <a class="lo_go  link" href="index.html" >WEB<span class="logo_2">Studio</span></a>
                 <ul class="list-heder list">
@@ -32,7 +33,7 @@
     <main>
         <section class="menu">
             <div class="conteiner">
-          <h1 hidden class="visually-hidden">porfolio</h1>
+          <h1  class="visually-hidden">porfolio</h1>
          <ul class="lists list">
             <li class="lists__item"><button class="lists__buuton" type="button">All</button></li>
             <li class="lists__item"><button class="lists__buuton" type="button">Web Site</button></li>
@@ -40,7 +41,7 @@
             <li class="lists__item"><button class="lists__buuton" type="button">Design</button></li>
             <li class="lists__item"><button class="lists__buuton" type="button">Marketing</button></li>
     
-       
+         </ul>
         <ul class="porfolio list">
             <li class="porfolio__item"><a class="link" href=""><img class="porfolio__photo" src="./images/img1.jpg" alt="Banking App Interface Concept" width="360">
                 <div class="border"><h2 class="portfolio__title">Banking App Interface Concept</h2>
@@ -75,7 +76,7 @@
     </main>
     <footer  class="footer">
         <div class="footer-conteiner">
-    <a class="lo_go link" href="index.html">WEB<span class="footer-logo">Studio</span></a>
+    <a class="lo_gof link" href="index.html">WEB<span class="footer-logo">Studio</span></a>
     <p class="footer-text" >Increase the flow of customers and sales for your business with digital marketing & growth solutions.</p>
     </div>
        </footer>
